--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,3 +7,7 @@
  Description: Thème enfant à l'ocasion de la nomination aux Oscars Shorts
  Version: 0.1
 */
+
+.story h2::after {
+    transform : rotate(20deg);
+}
