--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@
 */
 @keyframes rotation {
   from {
+    transform-origin: center center;
     transform: rotate(0deg);
   }
   to {
+    transform-origin: center center;
     transform: rotate(360deg);
   }
 }
