Tentative de modif de la rotation des fleurs

--- a/style.scss
+++ b/style.scss
@@ -12,10 +12,13 @@
 
 @keyframes rotation {
     from {
-      transform: rotate(0deg);
+        transform-origin: center center;
+        transform: rotate(0deg);
+      
     }
     to {
-      transform: rotate(360deg);
+        transform-origin : center center;
+        transform: rotate(360deg);
     }
 }
 
