--- a/style.scss
+++ b/style.scss
@@ -49,3 +49,46 @@
 .site-footer ul::after {
     animation: rotation 3s linear infinite;
 }
+
+// Animation fade-in des sections
+
+// Fade-in du haut vers le bas pour la 1ère bannière
+
+@keyframes fade-in {
+    from{
+        opacity: 0;
+        transform: translate(0%, 0%);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0%, 100%);
+    }
+}
+
+.banner {
+    animation: fade-in ease 3s;
+    
+}
+
+// Tous les élements en dehors de la 1ère bannière (sauf les textes) ont un effet fade-in du bas vers le haut
+
+// Animation titres
+
+#studio h2 {
+    color:red;
+    animation: animation-titre 1s ease;
+}
+
+h2 {
+    color:red;
+    animation: animation-titre 1s ease;
+}
+
+@keyframes animation-titre {
+    from{
+        transform: translate(0%, 0%) ;
+    }
+    to{
+        transform: translate(100px, 100%) ;
+    }
+}
