--- a/style.css
+++ b/style.css
@@ -44,4 +44,37 @@
 
 .site-footer ul::after {
   animation: rotation 3s linear infinite;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translate(0%, 0%);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0%, 100%);
+  }
+}
+.banner {
+  animation: fade-in ease 3s;
+}
+
+#studio h2 {
+  color: red;
+  animation: animation-titre 1s ease;
+}
+
+h2 {
+  color: red;
+  animation: animation-titre 1s ease;
+}
+
+@keyframes animation-titre {
+  from {
+    transform: translate(0%, 0%);
+  }
+  to {
+    transform: translate(100px, 100%);
+  }
 }/*# sourceMappingURL=style.css.map */
