--- a/style.scss
+++ b/style.scss
@@ -54,7 +54,7 @@
 
 // Fade-in du haut vers le bas pour la 1ère bannière
 
-@keyframes fade-in {
+@keyframes fade-inHB {
     from{
         opacity: 0;
         transform: translate(0%, -100%);
@@ -66,11 +66,59 @@
 }
 
 .banner {
-    animation: fade-in ease 3s;
+    animation: fade-inHB ease 3s;
     
 }
 
 // Tous les élements en dehors de la 1ère bannière (sauf les textes) ont un effet fade-in du bas vers le haut
+
+// @keyframes fade-inBH {
+//     from{
+//         opacity: 0;
+//         transform: translate(0%, 0%);
+//     }
+//     to{
+//         opacity: 1;
+//         transform: translate(0%, -10%);
+//     }
+// }
+
+// .story {
+//     animation: fade-inBH ease 3s;
+// }
+
+// .story h2::after {
+//     animation: fade-inBH ease 3s;
+// }
+
+// .story__article::after {
+//     animation: fade-inBH ease 3s;
+// }
+
+// #studio h2::before {
+//     animation: fade-inBH ease 3s;
+// }
+
+// #studio h2::after {
+//     animation: fade-inBH ease 3s;
+// }
+
+// .site-footer::before {
+//     animation: fade-inBH ease 3s;
+// }
+
+// .site-footer::after {
+//     animation: fade-inBH ease 3s;
+// }
+
+// .site-footer ul::after {
+//     animation: fade-inBH ease 3s;
+// }
+
+.site-footer ul {
+    animation: fade-inBH ease 3s;
+}
+
 
 // Animation titres
 
@@ -81,9 +129,9 @@
 
 @keyframes animation-titre {
     from{
-        transform: translate(0%, 0%) ;
+        transform: translate(0%, 100%) ;
     }
     to{
-        transform: translate(100px, 100%) ;
+        transform: translate(0%, -1%) ;
     }
 }
