--- a/style.scss
+++ b/style.scss
@@ -12,12 +12,12 @@
 
 @keyframes rotation {
     from {
-        transform-origin: center center;
+        transform-origin: 50% 50%;
         transform: rotate(0deg);
       
     }
     to {
-        transform-origin : center center;
+        transform-origin : 50% 50%;
         transform: rotate(360deg);
     }
 }
@@ -161,3 +161,17 @@
     margin-bottom: 250px;
 }
 
+// Vidéo bannière
+
+#background-video {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+}
+    
