--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 */
 @keyframes rotation {
   from {
-    transform-origin: center center;
+    transform-origin: 50% 50%;
     transform: rotate(0deg);
   }
   to {
-    transform-origin: center center;
+    transform-origin: 50% 50%;
     transform: rotate(360deg);
   }
 }
@@ -93,4 +93,17 @@
 
 .oscars {
   margin-bottom: 250px;
+}
+
+#background-video {
+  height: 100vh;
+  width: 100vw;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
 }/*# sourceMappingURL=style.css.map */
