--- a/style.scss
+++ b/style.scss
@@ -140,16 +140,20 @@
 
 // Section Oscars
 
+.oscars {max-width: 1100px;}
+
 .oscars .rubrique-oscars .texte-oscars {
 	background-image: url("./assets/images/Rectangle 23.png");
 }
 
 .site-footer {
     flex-direction: column;
+    display: flex;
+    align-items: center;
 }
 
 .texte-oscars {
-    padding: 3em 3em;
+    padding: 2em 2em;
 }
 
 .rubrique-oscars {
