--- a/style.css
+++ b/style.css
@@ -74,16 +74,22 @@
     transform: translate(0%, 0%);
   }
 }
+.oscars {
+  max-width: 1100px;
+}
+
 .oscars .rubrique-oscars .texte-oscars {
   background-image: url("./assets/images/Rectangle 23.png");
 }
 
 .site-footer {
   flex-direction: column;
+  display: flex;
+  align-items: center;
 }
 
 .texte-oscars {
-  padding: 3em 3em;
+  padding: 2em 2em;
 }
 
 .rubrique-oscars {
