Ajout effet flottement sur le logo

--- a/style.scss
+++ b/style.scss
@@ -68,7 +68,7 @@
 }
 
 .banner {
-    animation: fade-inHB ease 3s;
+    // animation: fade-inHB ease 3s;
     background-image: none;
 }
 
@@ -179,12 +179,18 @@
 
 // Logo
 
-// .logo {
-//     position: absolute;
-//     width: auto;
-//     height: auto;
-   
-// }
+.logo {
+    animation-name: flottement;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes flottement {
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 15px); }
+    100%   { transform: translate(0, -0px); }   
+}
 
 .banner img {
     position: absolute;
