--- a/style.scss
+++ b/style.scss
@@ -247,3 +247,65 @@ width: 100%;
     from{transform: translateX(0px) ;}
     to{transform: translateX(-300px) ;}
 }
+
+/* Sidenav menu */
+.sidenav {
+    height: 100%;
+    width: 1440px;
+    position: fixed;
+    z-index: 1;
+    top: 111px;
+  
+    background-color: #FFF5E9;
+    // padding-top: 60px;
+    transition: left 0.5s ease;
+  }
+  
+/* Sidenav menu links */
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #000000;
+    display: block;
+    transition: 0.3s;
+    font-family:'roboto mono', sans-serif;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 84.41px;
+}
+
+.sidenav a:hover {
+    color: #111;
+}
+
+.sidenav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Active class */
+.sidenav.active {
+    left: 0;
+}
+  
+/* Close btn */
+.sidenav .close {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+}
+
+/* Icône burger */
+.burger-icon span {
+    display: block;
+    width: 35px;
+    height: 5px;
+    background-color: black;
+    margin: 6px 0;
+}
+  
