--- a/style.css
+++ b/style.css
@@ -225,4 +225,63 @@
   height: 5px;
   background-color: black;
   margin: 6px 0;
+}
+
+.burger-hover:hover {
+  text-shadow: #FF5C00 1px 0 10px;
+}
+
+.petit-logo::before {
+  content: url("./assets/images/orchid.png");
+  position: absolute;
+  left: -49em;
+  top: -5px;
+}
+
+.petit-logo::after {
+  content: url("./assets/images/Sunflower.png");
+  position: absolute;
+  top: 80px;
+  right: -420px;
+}
+
+.histoire::before {
+  content: url("./assets/images/chibi_Kawaneko.png");
+  position: absolute;
+  top: -40px;
+  left: -300px;
+}
+
+.histoire::after {
+  content: url("./assets/images/random_flower.png");
+  position: absolute;
+  right: -650px;
+}
+
+.lieu::before {
+  content: url("./assets/images/flower.png");
+  position: absolute;
+  top: -13px;
+  left: -500px;
+}
+
+.lieu::after {
+  content: url("./assets/images/chibi_Jaakuna.png");
+  position: absolute;
+  top: -13px;
+  left: 500px;
+}
+
+.studio::before {
+  content: url("./assets/images/chibi_Orenjiiro.png");
+  position: absolute;
+  top: -47px;
+  left: -419px;
+}
+
+.studio::after {
+  content: url("./assets/images/hibiscus_footer.png");
+  position: absolute;
+  right: -700px;
+  top: -61px;
 }/*# sourceMappingURL=style.css.map */
