--- a/style.scss
+++ b/style.scss
@@ -263,7 +263,7 @@
 /* Sidenav menu links */
 
 .sidenav a {
-    padding: 0px 0px 0px 32px;
+    // padding: 0px 0px 0px 0px;
     text-decoration: none;
     font-size: 25px;
     color: #000000;
@@ -272,7 +272,7 @@
     font-family:'roboto mono', sans-serif;
     font-weight: 400;
     font-size: 64px;
-    line-height: 84.41px;
+    line-height: 20px;
 }
 
 .sidenav a:hover {
@@ -366,10 +366,16 @@
 .studio::after {
     content: url("./assets/images/hibiscus_footer.png");
     position: absolute;
-    right: -700px;
-    top: -61px;
+    right: -835px;
+    top: -194px;
 }
 
-// .site-header {
-//     position: fixed;
+.main-navigation {
+    position: fixed;
+}
+
+// .sidenav li {
+//     padding: 0px;
 // }
+
+// .burger {display:none;}
