Ajout animations sur les images

--- a/style.scss
+++ b/style.scss
@@ -318,6 +318,7 @@
 	position: absolute;
     left: -49em;
     top: -5em;
+    animation: rotation 6s linear infinite;
 }
 
 .petit-logo::after {
@@ -325,6 +326,7 @@
     position: absolute;
     top: 1em;
     right: -30em;
+    animation: rotation 6s linear infinite;
 }
 
 .histoire::before {
@@ -332,6 +334,10 @@
     position: absolute;
     top: -16em;
     left: -23em;
+    animation-name: flottement;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
 }
 
 .histoire::after{
@@ -341,6 +347,7 @@
     // height: 75px;
     right: -47em;
     top: -10em;
+    animation: rotation 6s linear infinite;
 }
 
 .lieu::before{
@@ -348,6 +355,7 @@
     position: absolute;
     top: -16em;
     left: -31em;
+    animation: rotation 6s linear infinite;
 }
 
 .lieu::after{
@@ -355,6 +363,10 @@
     position: absolute;
     top: -16em;
     left: 32em;
+    animation-name: flottement;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
 }
 
 .studio::before{
@@ -362,6 +374,10 @@
     position: absolute;
     top: -8em;
     left: -27em;
+    animation-name: flottement;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
 }
 
 .studio::after {
@@ -369,6 +385,7 @@
     position: absolute;
     right: -56em;
     top: -16em;
+    animation: rotation 6s linear infinite;
 }
 
 .main-navigation {
