--- a/style.scss
+++ b/style.scss
@@ -272,7 +272,8 @@
     font-family:'roboto mono', sans-serif;
     font-weight: 400;
     font-size: 64px;
-    line-height: 20px;
+    // line-height: 20px;
+    animation: animation-titre 1s ease;
 }
 
 .sidenav a:hover {
