--- a/style.scss
+++ b/style.scss
@@ -396,7 +396,9 @@
 }
 
 .burger {
-    display: flex;
+    // non affichage temporaire
+    display: none;
+    // display: flex;
     flex-direction: column;
     align-items: center;
 }
