--- a/style.scss
+++ b/style.scss
@@ -165,7 +165,8 @@
 
 // Vidéo bannière
 
-// #background-video {
+#background-video {
+    overflow: scroll;
 //     height: 100vh;
 //     width: 100vw;
 //     object-fit: cover;
@@ -175,7 +176,7 @@
 //     top: 0;
 //     bottom: 0;
 //     z-index: -1;
-// }
+}
 
 // Logo
 
