Ajout CSS pour la classe de la div du menu burger

--- a/style.scss
+++ b/style.scss
@@ -390,7 +390,11 @@
 .main-navigation {
     position: fixed;
     width: 1440px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+.image-burger {display:contents;}
 
 .sidenav li {
     padding: 20px;
