Ajout CSS pour la classe de la div du menu burger

--- a/style.css
+++ b/style.css
@@ -311,6 +311,13 @@
 .main-navigation {
   position: fixed;
   width: 1440px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-burger {
+  display: contents;
 }
 
 .sidenav li {
