Modif CSS pour la classe de la div des images burger et fixation du titre du site

--- a/style.css
+++ b/style.css
@@ -317,7 +317,13 @@
 }
 
 .image-burger {
-  display: contents;
+  position: absolute;
+  right: 10em;
+}
+
+.site-title {
+  display: flex;
+  position: fixed;
 }
 
 .sidenav li {
