--- a/style.scss
+++ b/style.scss
@@ -125,7 +125,6 @@
 // Animation titres
 
 .animation-titre {
-    
     animation: animation-titre 1s ease;
 }
 
@@ -421,3 +420,14 @@
     font-size: 10px;
     margin-top: 100px;
 }
+
+// Scroll
+
+// Titres
+
+// Basé sur l'animation de la div 'amimation-titre'
+
+.titreH2 {
+    height: 200vh;
+}
+
