Ajout CSS pour bouton croix du menu burger

--- a/style.scss
+++ b/style.scss
@@ -416,6 +416,10 @@
     align-items: center;
 }
 
+.croix_burger {
+    display: none;
+}
+
 .koukaki-menu {
     font-size: 10px;
     margin-top: 100px;
@@ -427,7 +431,9 @@
 
 // Basé sur l'animation de la div 'amimation-titre'
 
-.titreH2 {
-    height: 200vh;
-}
+// .titreH2 {
+//     height: 200vh;
+// }
+
+
 
