--- a/style.css
+++ b/style.css
@@ -150,7 +150,6 @@
   margin-top: 80px;
   width: 554px;
   height: 238px;
-  animation: cloudMove 2s ease;
 }
 
 .small_cloud {
@@ -265,7 +264,7 @@
 .histoire::after {
   content: url("./assets/images/little_flower.png");
   position: absolute;
-  right: 4em;
+  right: -1em;
   top: 32em;
   animation: rotation 6s linear infinite;
 }
@@ -343,4 +342,8 @@
 .koukaki-menu {
   font-size: 12px;
   margin-top: 100px;
+}
+
+.cloud-animation {
+  animation: cloudMove 2s ease;
 }/*# sourceMappingURL=style.css.map */
