Ajout CSS pour div 'cloud-wrapper'

--- a/style.css
+++ b/style.css
@@ -346,4 +346,9 @@
 
 .cloud-animation {
   animation: cloudMove 2s ease;
+}
+
+.cloud-wrapper {
+  position: absolute;
+  right: 10em;
 }/*# sourceMappingURL=style.css.map */
