--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
  Description: Thème enfant à l'ocasion de la nomination aux Oscars Shorts
  Version: 0.1
 */
+:root {
+  --o-animation-duration: 15s;
+}
+
 @keyframes rotation {
   from {
     transform-origin: 50% 50%;
@@ -19,33 +23,33 @@
   }
 }
 .story h2::after {
-  animation: rotation 6s linear infinite;
+  animation: rotation var(--o-animation-duration) linear infinite;
 }
 
 .story__article::after {
-  animation: rotation 6s linear infinite;
+  animation: rotation var(--o-animation-duration) linear infinite;
 }
 
 #studio h2::before {
-  animation: rotation 6s linear infinite;
+  animation: rotation var(--o-animation-duration) linear infinite;
 }
 
 #studio h2::after {
-  animation: rotation 6s linear infinite;
+  animation: rotation var(--o-animation-duration) linear infinite;
 }
 
 .site-footer::before {
-  animation: rotation 6s linear infinite;
+  animation: rotation var(--o-animation-duration) linear infinite;
   top: 12em;
 }
 
 .site-footer::after {
-  animation: rotation 6s linear infinite;
+  animation: rotation var(--o-animation-duration) linear infinite;
   bottom: 48.8em;
 }
 
 .site-footer ul::after {
-  animation: rotation 6s linear infinite;
+  animation: rotation var(--o-animation-duration) linear infinite;
 }
 
 @keyframes fade-inHB {
