--- a/style.scss
+++ b/style.scss
@@ -186,6 +186,7 @@
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
+    position: fixed;
 }
 
 @keyframes flottement {
