--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@
   animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
+  position: fixed;
 }
 
 @keyframes flottement {
