Modif dimensions des fleurs

--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,7 @@
 // Fleurs: Rotation 
 
 :root {
-    --o-animation-duration: 15s;
+    --o-animation-duration: 8s;
 }
 
 @keyframes rotation {
@@ -30,22 +30,26 @@
 
 .story h2::after {
     @include animation-fleur;
-}
-
-.story h2::after {
-    @include animation-fleur;
+    height: 154px;
+    width: 154px;
 }
 
 .story__article::after {
     @include animation-fleur;
+    height: 188px;
+    width: 188px;
 }
 
 #studio h2::before {
     @include animation-fleur;
+    height: 198.99px;
+    width: 202.25px;
 }
 
 #studio h2::after {
     @include animation-fleur;
+    height: 108.76px;
+    width: 108.76px;
 }
 
 .site-footer::before {
@@ -56,6 +60,8 @@
 .site-footer::after {
     @include animation-fleur;
     bottom: 48.8em;
+    height: 168.24px;
+    width: 172.57px;
 }
 
 .site-footer ul::after {
@@ -150,18 +156,10 @@
 
 .swiper {
     width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-
-.swiper-slide {
-    background-position: center;
-    background-size: cover;
 }
 
 .swiper-slide img {
-    display: block;
-    width: 100%;
+    max-width: none;
 }
 
 // Rubrique "Lieu"
@@ -354,6 +352,16 @@
     position: absolute;
     right: 10em;
 }
+
+#characters {width: 100%;}
+
+h3 {
+    background-position: left;
+    text-align: left;
+    padding: 1em;
+}
+
+.main-character {max-width: 1440px;}
 
 // Responsive
 
